--- a/demo/css/topnav.css
+++ b/demo/css/topnav.css
@@ -2,6 +2,8 @@
 	height: 105px;
 	width: 100%;
 	padding: 5px 0;
+	background-color: #fff;
+	border-bottom: 2px solid #8D8D8D;
 }
 .portal-nav {
 	height: 95px;
