--- a/templates/index.html
+++ b/templates/index.html
@@ -11,19 +11,22 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/topnav.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/topnav.css') }}">
 </head>
 <body>
 
-    <img src="img/TrueNthHoldBackground.jpg" class="page-background" />
+    <img src="{{ url_for('static', filename='img/TrueNthHoldBackground.jpg') }}" class="page-background" />
     <div id="mainNav" class="nav-import">
         <div class="container">
             <!-- Top Nav begins here -->
             <div class="">
                 <div class="pull-left nav-logos">
-                    <a href="http://truenth-demo.cirg.washington.edu"><img src="img/logo_truenth.png" /></a>
-                    <a href="http://us.movember.com"><img src="img/logo_movember.png" /></a>
+                    <a href="{{ PORTAL }}">
+                        <img src="{{ url_for('static', filename='img/logo_truenth.png') }}" />
+                    </a>
+                    <a href="http://us.movember.com">
+                        <img src="{{ url_for('static', filename='img/logo_movember.png') }}" /></a>
                 </div>
                 
                 <div class="pull-right nav-links">
@@ -57,7 +60,7 @@
                         <div class="col-sm-6">
                             <p class="lead">Login to your account</p>
                             <div>
-                                <a href="portal.html" class="btn btn-primary btn-tnth-primary"><i class="fa fa-facebook-official"></i>&nbsp; Sign In with Facebook</a>
+                                <a href="login" class="btn btn-primary btn-tnth-primary"><i class="fa fa-facebook-official"></i>&nbsp; Sign In with Facebook</a>
                                 <div style="margin: 1em 0 1em 2em">or</div>
                                 <a href="portal.html" class="btn btn-primary btn-tnth-primary"><i class="fa fa-user"></i>&nbsp; Sign In with Movember</a>
                             </div>
@@ -77,7 +80,7 @@
     
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-<script src="js/main.js"></script>
+<script src="{{ url_for('static', filename='js/main.js') }}"></script>
 <script>
 </script>
 
