--- a/templates/portal.html
+++ b/templates/portal.html
@@ -39,6 +39,9 @@
                     </div>
                     <button type="submit" class="btn btn-default show-search"><i class="fa fa-search"></i></button>
                   </form>
+                  {% if user %}
+                  <div class="nav-userinfo">Welcome, {{ user.username }}</div>
+                  {% endif %}
                 </div>
             </div>
             <!-- Top Nav ends here -->
@@ -63,8 +66,8 @@
             <div class="col-sm-6 col-md-4">
                 <div class="well lead-well">
                     <h3>Managing prostate cancer</h3>
-                    <a href="http://decision-dev.au.truenth.org:8000/" class="btn btn-primary btn-tnth-primary">Go to intervention</a>
                     <p>Latine aliquam vix et, latine euripidis delicatissimi ex vix. Ne duo summo graecis, minimum voluptaria dissentiet in cum. Eu dicit paulo mei, eam error dissentiunt eu. Sed ex fabulas mandamus, eum et cibo dicam efficiendi. Cum legere cetero hendrerit id.</p>
+                    <p><a href="http://decision-dev.au.truenth.org:8000/" class="btn btn-primary btn-tnth-primary">Go to intervention <i class="fa fa-chevron-right"></i></a></p>
                 </div>
             </div>                        
 
