--- a/templates/portal.html
+++ b/templates/portal.html
@@ -27,21 +27,27 @@
                 </div>
                 
                 <div class="pull-right nav-links">
+                    {% if user %}
+                    <div class="btn-group nav-userinfo">
+                      <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                        Welcome, {{ user.username }} <span class="fa fa-caret-down"></span>
+                      </button>
+                      <ul class="dropdown-menu" role="menu">
+                        <li><a href="#">My Profile</a></li>
+                        <li><a href="logout">Log Out</a></li>
+                      </ul>
+                    </div>
+                    {% endif %}
                     <a href="#" class="btn btn-default">About</a>
                     <a href="#" class="btn btn-default">Help</a>
-                    <a href="#" class="btn btn-default">My Profile</a>
-                    <a href="logout" class="btn btn-default">Log Out</a>
                     <form class="navbar-form" role="search">
-                    <div class="form-group">
-                        <div class="hide-initial" id="search-box">
-                            <input type="text" class="form-control" placeholder="Search">
+                        <div class="form-group">
+                            <div class="hide-initial" id="search-box">
+                                <input type="text" class="form-control" placeholder="Search">
+                            </div>
                         </div>
-                    </div>
-                    <button type="submit" class="btn btn-default show-search"><i class="fa fa-search"></i></button>
-                  </form>
-                  {% if user %}
-                  <div class="nav-userinfo">Welcome, {{ user.username }}</div>
-                  {% endif %}
+                        <button type="submit" class="btn btn-default show-search"><i class="fa fa-search"></i></button>
+                    </form>
                 </div>
             </div>
             <!-- Top Nav ends here -->
