Make portal-wrapper logout button functional

--- a/templates/portal_wrapper.html
+++ b/templates/portal_wrapper.html
@@ -9,7 +9,7 @@
         <a href="#" class="btn btn-default">About</a>
         <a href="#" class="btn btn-default">Help</a>
         <a href="#" class="btn btn-default">My Profile</a>
-        <a href="index.html" class="btn btn-default">Log Out</a>
+        <a href="{{PORTAL}}/logout" class="btn btn-default">Log Out</a>
         <form class="navbar-form" role="search">
         <div class="form-group">
             <div class="hide-initial" id="search-box">
