--- a/templates/index.html
+++ b/templates/index.html
@@ -81,9 +81,8 @@
     
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+<script src="{{ url_for('static', filename='js/topnav.js') }}"></script>
 <script src="{{ url_for('static', filename='js/main.js') }}"></script>
-<script>
-</script>
 
 </body>
 </html>
