--- a/templates/index.html
+++ b/templates/index.html
@@ -19,32 +19,59 @@
 
     <img src="{{ url_for('static', filename='img/TrueNthHoldBackground.jpg') }}" class="page-background" />
     <div id="mainNav" class="nav-import">
-        <div class="container">
-            <!-- Top Nav begins here -->
-            <div class="">
-                <div class="pull-left nav-logos">
-                    <a href="{{ PORTAL }}">
-                        <img src="{{ url_for('static', filename='img/logo_truenth.png') }}" />
-                    </a>
-                    <a href="http://us.movember.com">
-                        <img src="{{ url_for('static', filename='img/logo_movember.png') }}" /></a>
-                </div>
-                
-                <div class="pull-right nav-links">
-                    <a href="#" class="btn btn-default">About</a>
-                    <a href="#" class="btn btn-default">Help</a>
-                    <form class="navbar-form" role="search">
+       <!-- Top Nav begins here --> 
+
+        <div class="container hidden-xs">
+            <div class="pull-left nav-logos">
+                <a href="{{ PORTAL }}">
+                    <img src="{{ url_for('static', filename='img/logo_truenth.png') }}" />
+                </a>
+                <a href="http://us.movember.com">
+                    <img src="{{ url_for('static', filename='img/logo_movember.png') }}" /></a>
+            </div>
+            
+            <div class="pull-right nav-links">
+                <a href="#" class="btn btn-default">About</a>
+                <a href="#" class="btn btn-default">Help</a>
+                <form class="navbar-form" role="search">
                     <div class="form-group">
                         <div class="hide-initial" id="search-box">
                             <input type="text" class="form-control" placeholder="Search">
                         </div>
                     </div>
                     <button type="submit" class="btn btn-default show-search"><i class="fa fa-search"></i></button>
-                  </form>
-                </div>
+                </form>
             </div>
-            <!-- Top Nav ends here -->
         </div>
+
+        <!-- Responsive navbar for xs width -->
+        <nav class="navbar navbar-static-top visible-xs" style="margin-bottom: 5px; border-bottom: 2px solid #8D8D8D">
+            <div class="container-fluid">
+              <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                  <span class="sr-only">Toggle menu</span>
+                  <i class="fa fa-bars fa-lg"></i> &nbsp; Menu
+                </button>
+                <a class="navbar-brand" href="#">TrueNTH</a>
+              </div>
+              <div id="navbar" class="navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
+                <ul class="nav navbar-nav">
+                  <li><a href="#">About</a></li>
+                  <li><a href="#">Help</a></li>
+                </ul>
+                <form class="navbar-form" role="search">
+                    <div class="form-group">
+                        <div>
+                            <input type="text" class="form-control" placeholder="Search">
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-default">Search</button>
+                </form>
+              </div>
+            </div>
+        </nav>
+
+        <!-- Top Nav ends here -->
     </div>
       
 
