--- a/static/css/topnav.css
+++ b/static/css/topnav.css
@@ -1,9 +1,13 @@
 .nav-import {
-	height: 105px;
 	width: 100%;
-	padding: 5px 0;
 	background-color: #fff;
 	border-bottom: 2px solid #8D8D8D;
+}
+.main-nav {
+	padding: 5px 15px;
+}
+.xs-nav {
+	margin-bottom: 5px;
 }
 .portal-nav {
 	height: 95px;
