--- a/templates/portal.html
+++ b/templates/portal.html
@@ -17,42 +17,74 @@
 </head>
 <body>
 
-    <img src="{{ url_for('static', filename='img/TrueNthHoldBackground.jpg') }}" class="page-background" />
+    <img src="{{ url_for('static', filename='img/TrueNthHoldBackground.jpg') }}" class="page-background hidden-xs" />
     <div id="mainNav" class="nav-import">
-        <div class="container">
-            <!-- Top Nav begins here -->
-            <div class="">
-                <div class="pull-left nav-logos">
-                    <a href="{{ PORTAL }}"><img src="{{ url_for('static', filename='img/logo_truenth.png') }}" /></a>
-                    <a href="http://us.movember.com"><img src="{{ url_for('static', filename='img/logo_movember.png') }}" /></a>
-                </div>
-                
-                <div class="pull-right nav-links">
-                    {% if user %}
-                    <div class="btn-group nav-userinfo">
-                      <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                        Welcome, {{ user.username }} <span class="fa fa-caret-down"></span>
-                      </button>
-                      <ul class="dropdown-menu" role="menu">
-                        <li><a href="#">My Profile</a></li>
-                        <li><a href="logout">Log Out</a></li>
-                      </ul>
-                    </div>
-                    {% endif %}
-                    <a href="#" class="btn btn-default">About</a>
-                    <a href="#" class="btn btn-default">Help</a>
-                    <form class="navbar-form" role="search">
-                        <div class="form-group">
-                            <div class="hide-initial" id="search-box">
-                                <input type="text" class="form-control" placeholder="Search">
-                            </div>
-                        </div>
-                        <button type="submit" class="btn btn-default show-search"><i class="fa fa-search"></i></button>
-                    </form>
-                </div>
+        <!-- Top Nav begins here --> 
+        <!-- Main Nav for most screen sizes -->
+        <div class="container hidden-xs main-nav">
+            <div class="pull-left nav-logos">
+                <a href="{{ PORTAL }}"><img src="{{ url_for('static', filename='img/logo_truenth.png') }}" /></a>
+                <a href="http://us.movember.com"><img src="{{ url_for('static', filename='img/logo_movember.png') }}" /></a>
             </div>
-            <!-- Top Nav ends here -->
+            <div class="pull-right nav-links">
+                {% if user %}
+                <div class="btn-group nav-userinfo">
+                  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                    Welcome, {{ user.username }} <span class="fa fa-caret-down"></span>
+                  </button>
+                  <ul class="dropdown-menu" role="menu">
+                    <li><a href="#">My Profile</a></li>
+                    <li><a href="logout">Log Out</a></li>
+                  </ul>
+                </div>
+                {% endif %}
+                <a href="#" class="btn btn-default">About</a>
+                <a href="#" class="btn btn-default">Help</a>
+                <form class="navbar-form" role="search">
+                    <div class="form-group">
+                        <div class="hide-initial" id="search-box">
+                            <input type="text" class="form-control" placeholder="Search">
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-default show-search"><i class="fa fa-search"></i></button>
+                </form>
+            </div>
         </div>
+
+        <!-- Responsive navbar for xs width -->
+        <nav class="navbar navbar-static-top visible-xs xs-nav">
+            <div class="container-fluid">
+              <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                  <span class="sr-only">Toggle menu</span>
+                  <i class="fa fa-bars fa-lg"></i> &nbsp; Menu
+                </button>
+                <a class="navbar-brand" href="#">TrueNTH</a>
+              </div>
+              <div id="navbar" class="navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
+                <ul class="nav navbar-nav">
+                    {% if user %}
+                    <li><a href="#">My Profile</a></li>
+                    {% endif %}
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Help</a></li>
+                    {% if user %}
+                    <li><a href="logout">Log Out</a></li>
+                    {% endif %}
+                </ul>
+                <form class="navbar-form" role="search">
+                    <div class="form-group">
+                        <div>
+                            <input type="text" class="form-control" placeholder="Search">
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-default">Search</button>
+                </form>
+              </div>
+            </div>
+        </nav>
+
+        <!-- Top Nav ends here -->
     </div>
       
 
