--- a/templates/portal_wrapper.html
+++ b/templates/portal_wrapper.html
@@ -1,7 +1,7 @@
-<div class="container">
+<div class="container hidden-xs main-nav">
     <div class="pull-left nav-logos">
         <!-- Probably need to use absolute links for images -->
-        <a href="http://truenth-demo.cirg.washington.edu"><img src="{{PORTAL}}{{logo_truenth}}" /></a>
+        <a href="http://truenth-demo.cirg.washington.edu:5000"><img src="{{PORTAL}}{{logo_truenth}}" /></a>
         <a href="http://us.movember.com"><img src="{{PORTAL}}{{logo_movember}}" /></a>
     </div>
 
@@ -29,3 +29,35 @@
         </form>
     </div>
 </div>
+<!-- Responsive navbar for xs width -->
+<nav class="navbar navbar-static-top visible-xs xs-nav">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only">Toggle menu</span>
+          <i class="fa fa-bars fa-lg"></i> &nbsp; Menu
+        </button>
+        <a class="navbar-brand" href="#">TrueNTH</a>
+      </div>
+      <div id="navbar" class="navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
+        <ul class="nav navbar-nav">
+            {% if username %}
+            <li><a href="#">My Profile</a></li>
+            {% endif %}
+            <li><a href="#">About</a></li>
+            <li><a href="#">Help</a></li>
+            {% if username %}
+            <li><a href="{{PORTAL}}/logout">Log Out</a></li>
+            {% endif %}
+        </ul>
+        <form class="navbar-form" role="search">
+            <div class="form-group">
+                <div>
+                    <input type="text" class="form-control" placeholder="Search">
+                </div>
+            </div>
+            <button type="submit" class="btn btn-default">Search</button>
+        </form>
+      </div>
+    </div>
+</nav>
