Add logo to xs topnav
TrueNTH logo to topnav menu when in xs screen size (mobile).

--- a/static/css/topnav.css
+++ b/static/css/topnav.css
@@ -9,6 +9,12 @@
 .xs-nav {
 	margin-bottom: 5px;
 }
+.xs-nav .navbar-brand {
+	padding: 4px;
+}
+.xs-nav .navbar-brand img {
+	height: 54px;
+}
 .portal-nav {
 	height: 95px;
 	width: 100%;
