--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,7 @@
                   <span class="sr-only">Toggle menu</span>
                   <i class="fa fa-bars fa-lg"></i> &nbsp; Menu
                 </button>
-                <a class="navbar-brand" href="#">TrueNTH</a>
+                <a class="navbar-brand" href="#"><img src="{{ url_for('static', filename='img/logo_truenth.png') }}" /></a>
               </div>
               <div id="navbar" class="navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
                 <ul class="nav navbar-nav">
