--- a/templates/portal_wrapper.html
+++ b/templates/portal_wrapper.html
@@ -38,6 +38,7 @@
           <i class="fa fa-bars fa-lg"></i> &nbsp; Menu
         </button>
         <a class="navbar-brand" href="#"><img src="{{PORTAL}}{{logo_truenth}}" /></a>
+        <a class="navbar-brand logo-movember" href="#"><img src="{{PORTAL}}{{logo_movember}}" /></a>
       </div>
       <div id="navbar" class="navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
         <ul class="nav navbar-nav">
