Use config value for PORTAL rather than hardcoding.

--- a/templates/portal_wrapper.html
+++ b/templates/portal_wrapper.html
@@ -1,7 +1,7 @@
 <div class="container hidden-xs main-nav">
     <div class="pull-left nav-logos">
         <!-- Probably need to use absolute links for images -->
-        <a href="http://truenth-demo.cirg.washington.edu:5000"><img src="{{PORTAL}}{{logo_truenth}}" /></a>
+        <a href="{{PORTAL}}"><img src="{{PORTAL}}{{logo_truenth}}" /></a>
         <a href="http://us.movember.com"><img src="{{PORTAL}}{{logo_movember}}" /></a>
     </div>
 
