Expanded install instructions and brought default config up to current use.

--- a/templates/portal.html
+++ b/templates/portal.html
@@ -107,7 +107,7 @@
                 <div class="well lead-well">
                     <h3>Managing prostate cancer</h3>
                     <p>Latine aliquam vix et, latine euripidis delicatissimi ex vix. Ne duo summo graecis, minimum voluptaria dissentiet in cum. Eu dicit paulo mei, eam error dissentiunt eu. Sed ex fabulas mandamus, eum et cibo dicam efficiendi. Cum legere cetero hendrerit id.</p>
-                    <p><a href="{{ P3P_URL }}" class="btn btn-primary btn-tnth-primary">Go to intervention <i class="fa fa-chevron-right"></i></a></p>
+                    <p><a href="{{ DEMO_INTERVENTION }}" class="btn btn-primary btn-tnth-primary">Go to intervention <i class="fa fa-chevron-right"></i></a></p>
                 </div>
             </div>                        
 
