Expanding config links for other interventions. app.config is in template namespace - no need to pass in.

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
        <!-- Main Nav for most screen sizes -->
         <div class="container hidden-xs main-nav">
             <div class="pull-left nav-logos">
-                <a href="{{ PORTAL }}">
+                <a href="{{ config['PORTAL'] }}">
                     <img src="{{ url_for('static', filename='img/logo_truenth.png') }}" />
                 </a>
                 <a href="http://us.movember.com">
