--- a/templates/profile.html
+++ b/templates/profile.html
@@ -98,12 +98,12 @@
                     <p>You can add or edit any details here.</p>
 
                     <form id="profileForm" class="form" role="form">
-                        <input type="hidden" name="birthday" id="birthday" value="{{ user.birthdate if user.birthdate }}">
+                        <input type="hidden" data-field="[birthDate]" name="birthDate" id="birthday" value="{{ user.birthdate if user.birthdate }}">
                         <div class="form-group">
                             <label>Name</label>
                             <div class="row">
                                 <div class="col-xs-6 col-md-6">
-                                    <input class="form-control" name="firstname" placeholder="First Name" value="{{ user.first_name if user.first_name }}" type="text" />
+                                    <input class="form-control" id="firstname" name="firstname" placeholder="First Name" value="{{ user.first_name if user.first_name }}" type="text" />
                                 </div>
                                 <div class="col-xs-6 col-md-6">
                                     <input class="form-control" name="lastname" placeholder="Last Name" value="{{ user.last_name if user.last_name }}" type="text" />
@@ -151,20 +151,19 @@
                                     Female
                                 </label>
                                  <label class="radio-inline">
-                                    <input type="radio" name="sex" id="sexO" value="other" {{ "checked" if user.gender == "undifferentiated"}}/>
+                                    <input type="radio" name="sex" id="sexO" value="undifferentiated" {{ "checked" if user.gender == "undifferentiated"}}/>
                                     Other
                                 </label>                               
                             </div>
                         </div>
-                        <div class="form-group">
-                            <label for="email">Email address
-                                <input type="email" class="form-control" id="email" name="email" placeholder="Email" value="{{ user.email if user.email }}">
-                            </label>
+                        <div class="form-group" id="emailGroup">
+                            <label for="email">Email address</label>
+                            <input type="email" class="form-control" id="email" name="email" placeholder="Email" value="{{ user.email if user.email }}">
+                            <span id="emailError" class="help-block" style="display: none">This isn't a valid e-mail address, please double-check.</span>
                         </div>
                         <div class="form-group">
-                            <label for="phone">Cell phone
-                                <input type="text" class="form-control" id="phone" name="phone" placeholder="Mobile phone" value="{{ user.phone if user.phone }}">
-                            </label>
+                            <label for="phone">Cell phone</label>
+                            <input type="text" class="form-control" id="phone" name="phone" placeholder="Mobile phone" value="{{ user.phone if user.phone }}">
                         </div>
                         <br />
                         <br />
@@ -223,24 +222,63 @@ $(document).ready(function(){
             if (goodDate) {
                 $("#bdGroup").removeClass("has-error");
                 $("#bdError").hide();
-                $("#birthday").val(date);
+                // Set date if YYYY-MM-DD
+                $("#birthday").val(y+"-"+m+"-"+d);
             } else {
                 $("#bdGroup").addClass("has-error");
                 $("#bdError").html(errorMsg).show();
                 $("#birthday").val("");
             }
+        } else {
+            $("#birthday").val("");
         }
     });
+
+    // Simple email validation
+    function validateEmail($email) {
+        var emailReg = /^([\w-]+(?:\.[\w-]+)*)@((?:[\w-]+\.)*\w[\w-]{0,66})\.([a-z]{2,6}(?:\.[a-z]{2})?)$/i;
+        return emailReg.test( $email );
+    }
+    $("#email").on("change",function(){
+       if (!validateEmail($(this).val())) {
+           $("#emailGroup").addClass("has-error");
+           $("#emailError").show();
+       } else {
+           $("#emailGroup").removeClass("has-error");
+           $("#emailError").hide();
+       }
+    });
+
     $("#updateProfile").on("click", function(event){
         event.preventDefault();
-        var dataToPass = $("#profileForm").serializeArray();
-        console.log(dataToPass);
+
+        var getBirthday = $("input[name=birthDate]").val();
+        var getFirstname = $("input[name=firstname]").val();
+        var getLastname = $("input[name=lastname]").val();
+        var getSex = $("input[name=sex]:checked").val();
+        var getEmail = $("input[name=email]").val();
+        var getPhone = $("input[name=phone]").val();
+
+        // Put form data into FHIR array
+        var demoArray = {};
+        demoArray["birthDate"] = getBirthday;
+        demoArray["gender"] = getSex;
+        demoArray["name"] = {
+            "given": getFirstname,
+            "family": getLastname
+        };
+        demoArray["telecom"] = [
+            { "system": "email", "value": getEmail },
+            { "system": "phone", "value": getPhone }
+        ]
+        console.log(JSON.stringify(demoArray));
+
         /** Sample POST AJAX
         var request = $.ajax ({
             type: "POST",
             url: 'servicegoeshere',
             dataType: 'json',
-            data: dataToPass
+            data: demoArray
         });
         request.done(function(data, textStatus, jqXHR) {
             console.log('done');
