Tweaks to portal UI and wording of login.

--- a/templates/index.html
+++ b/templates/index.html
@@ -78,7 +78,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
+            <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
 
                 <div class="well lead-well">
                     <p>TrueNTH is a revolutionary new program, funded by the Movember Foundation, that will sigificantly improve the physical and mental health of men diagnosed and living with prostate cancer.</p>
@@ -86,19 +86,12 @@
                     <p>TrueNTH online give you the tools to feel knowledgeable and confident about managing your condition.</p>
                     <hr />
                     <div class="row">
-                        <div class="col-sm-6">
-                            <p class="lead">Login to your account</p>
-                            <div>
+                        <div class="col-xs-12">
+                            <p class="lead">Log in to an existing account or create a new one</p>
+                            <div class="text-center">
                                 <a href="login" class="btn btn-primary btn-tnth-primary"><i class="fa fa-facebook-official"></i>&nbsp; Sign In with Facebook</a>
-                                <div style="margin: 1em 0 1em 2em">or</div>
+                                <div style="margin: 1em 0 1em">or</div>
                                 <a href="portal.html" class="btn btn-primary btn-tnth-primary"><i class="fa fa-user"></i>&nbsp; Sign In with Movember</a>
-                            </div>
-                        </div>
-                        <div class="col-sm-6">
-                            <hr class="visible-xs" />
-                            <p class="lead">Register for an account</p>
-                            <div>
-                                <div class="btn btn-default"><i class="fa fa-pencil"></i>&nbsp; Register Now</div>
                             </div>
                         </div>
                     </div>
