--- a/templates/profile.html
+++ b/templates/profile.html
@@ -108,10 +108,10 @@
                         <div class="form-group">
                             <label>Name</label>
                             <div class="row">
-                                <div class="col-xs-6 col-md-6">
+                                <div class="col-xs-6">
                                     <input class="form-control" id="firstname" name="firstname" placeholder="First Name" value="{{ user.first_name if user.first_name }}" type="text" />
                                 </div>
-                                <div class="col-xs-6 col-md-6">
+                                <div class="col-xs-6">
                                     <input class="form-control" name="lastname" placeholder="Last Name" value="{{ user.last_name if user.last_name }}" type="text" />
                                 </div>
                             </div>
@@ -119,7 +119,7 @@
                         <div class="form-group" id="bdGroup">
                             <label>Birth Date</label>
                             <div class="row">
-                                <div class="col-xs-4 col-md-4">
+                                <div class="col-xs-4">
                                     <select class="form-control bd-element" name="birthdayMonth" id="month">
                                         <option value="">Month...</option>
                                         <option value="01">January</option>
@@ -136,10 +136,10 @@
                                         <option value="12">December</option>
                                     </select>
                                 </div>
-                                <div class="col-xs-4 col-md-4">
+                                <div class="col-xs-4">
                                     <input class="form-control bd-element" id="date" name="birthdayDate" placeholder="Date" type="text" maxlength="2" />
                                 </div>
-                                <div class="col-xs-4 col-md-4">
+                                <div class="col-xs-4">
                                     <input class="form-control bd-element" id="year" name="birthdayYear" placeholder="Year" type="text" maxlength="4" />
                                 </div>
                             </div>
