--- a/portal/templates/portal.html
+++ b/portal/templates/portal.html
@@ -40,6 +40,8 @@
                 {% endif %}
                 <a href="#" class="btn btn-default">About</a>
                 <a href="#" class="btn btn-default">Help</a>
+                <!--
+                Removing search for now
                 <form class="navbar-form" role="search">
                     <div class="form-group">
                         <div class="hide-initial" id="search-box">
@@ -48,6 +50,7 @@
                     </div>
                     <button type="submit" class="btn btn-default show-search"><i class="fa fa-search"></i></button>
                 </form>
+                -->
             </div>
         </div>
 
