--- a/portal/templates/portal_wrapper.html
+++ b/portal/templates/portal_wrapper.html
@@ -6,19 +6,25 @@
     </div>
 
     <div class="pull-right nav-links">
+        <a href="" class="btn btn-default"><i class="fa fa-chevron-left"></i> Back to TrueNTH Home</a>
         {% if username %}
         <div class="btn-group nav-userinfo">
           <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
             Welcome, {{ username }} <span class="fa fa-caret-down"></span>
           </button>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#">My Profile</a></li>
+            <li><a href="{{PORTAL}}/profile">My Profile</a></li>
             <li><a href="{{PORTAL}}/logout">Log Out</a></li>
           </ul>
         </div>
         {% endif %}
         <a href="#" class="btn btn-default">About</a>
         <a href="#" class="btn btn-default">Help</a>
+        <div class="pull-right text" style="margin-top: 1em">
+            <em>You are currently using <span id="intName"></span></em> &nbsp;
+            <a href="{{PORTAL}}" class="btn btn-sm btn-default"><i class="fa fa-chevron-left"></i> Back to TrueNTH Home</a>
+        </div>
+        <!-- Removing search for now
         <form class="navbar-form" role="search">
             <div class="form-group">
                 <div class="hide-initial" id="search-box">
@@ -27,6 +33,7 @@
             </div>
             <button type="submit" class="btn btn-default show-search"><i class="fa fa-search"></i></button>
         </form>
+        -->
     </div>
 </div>
 <!-- Responsive navbar for xs width -->
